--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" type="image/png" href="../img/ryicon.jpg" />
-    <title>BookStore</title>
+    <title>CakeZone</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -131,7 +131,7 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">person</i>Quản
+            ><i class="material-icons" style="margin-right: 10px"></i>Quản
             lý đầu bếp</a
           >
         </li>
@@ -145,7 +145,7 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">table_view</i
+            ><i class="material-icons" style="margin-right: 10px"></i
             >Quản lý sản phẩm</a
           >
         </li>
@@ -159,7 +159,7 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">weekend</i
+            ><i class="material-icons" style="margin-right: 10px"></i
             >Quản lý đơn hàng</a
           >
         </li>
@@ -174,13 +174,13 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">category</i
+            ><i class="material-icons" style="margin-right: 10px"></i
             >Quản lý danh mục</a
           >
         </li>
         <li>
           <a
-            href="phieunhap.html"
+            href="import.html"
             style="
               display: flex;
               align-items: center;
@@ -188,7 +188,7 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">inventory_2</i
+            ><i class="material-icons" style="margin-right: 10px"></i
             >Quản lý nhập hàng</a
           >
         </li>
@@ -203,7 +203,7 @@
               text-decoration: none;
             "
             ><i class="material-icons" style="margin-right: 10px"
-              >attach_money</i
+              ></i
             >Quản lý giá bán</a
           >
         </li>
@@ -217,7 +217,7 @@
               color: white;
               text-decoration: none;
             "
-            ><i class="material-icons" style="margin-right: 10px">inventory</i
+            ><i class="material-icons" style="margin-right: 10px"></i
             >Quản lý tồn kho</a
           >
         </li>
