--- a/admin/import.html
+++ b/admin/import.html
@@ -189,7 +189,7 @@
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý danh mục</a>
       </li>
       <li>
-        <a href="phieunhap.html" style="
+        <a href="import.html" style="
               display: flex;
               align-items: center;
               padding: 0.75rem 1rem;
@@ -233,7 +233,7 @@
     <h1 style="margin-bottom: 1rem">Quản lý nhập hàng</h1>
     <!-- Button Add Import -->
     <div style="margin-bottom:1.2rem;text-align:left;">
-      <button class="btn-add" onclick="window.location.href='themphieunhap.html'">
+      <button class="btn-add" onclick="window.location.href='import-add.html'">
         <i class="material-icons-round">add_box</i> Thêm phiếu nhập
       </button>
     </div>
@@ -281,7 +281,7 @@
   <script>
     document.querySelectorAll('.btn-view').forEach(btn => {
       btn.addEventListener('click', () => {
-        window.location.href = 'chitietphieunhap.html';
+        window.location.href = 'chitietimport.html';
       });
     });
   </script>
