--- a/admin/order.html
+++ b/admin/order.html
@@ -382,7 +382,7 @@
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý danh mục</a>
       </li>
       <li>
-        <a href="phieunhap.html" style="
+        <a href="import.html" style="
               display: flex;
               align-items: center;
               padding: 0.75rem 1rem;
