Update giao diện admin đến quản lý nhập hàng (chưa xong)(2)

--- a/admin/chef-detail-johnconstatine.html
+++ b/admin/chef-detail-johnconstatine.html
@@ -169,7 +169,7 @@
     }
 
     .btn-gradient {
-      background: linear-gradient(195deg, #e88f2a, #e88f2a);
+      background: #ff9800;
       color: white;
     }
 
