--- a/admin/edit-category.html
+++ b/admin/edit-category.html
@@ -101,7 +101,7 @@
     }
 
     .btn-gradient {
-      background: linear-gradient(195deg, #ec407a, #d81b60);
+      background: #ff9800;
       color: white;
       box-shadow: 0 3px 6px rgba(233, 30, 99, 0.3);
     }
