--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="../img/ryicon.jpg">
   <title>BookStore - Thêm danh mục</title>
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <link href="assets/css/pure-style.css" rel="stylesheet" />
-<style>
-  /* ==== Sidebar hover ==== */
+  <style>
+    /* ==== Sidebar hover ==== */
     aside ul li a:hover,
     aside li a:hover {
       background-color: rgba(255, 255, 255, 0.1);
@@ -36,7 +38,96 @@
       background: linear-gradient(195deg, #2c2c2e, #2c2c2e);
       cursor: pointer;
     }
-</style>
+
+    /* ===== MODAL ===== */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.45);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: #fff;
+      padding: 24px;
+      border-radius: 10px;
+      width: 450px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+      animation: fadeIn 0.25s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.96);
+      }
+
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 14px;
+    }
+
+    .modal-header h3 {
+      margin: 0;
+      font-size: 18px;
+    }
+
+    .modal-close {
+      cursor: pointer;
+      font-size: 22px;
+      color: #999;
+    }
+
+    .modal-close:hover {
+      color: #000;
+    }
+
+    .modal input {
+      width: 100%;
+      padding: 8px 10px;
+      margin: 6px 0 14px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+    }
+
+    .modal button {
+      background-color: #1976d2;
+      color: #fff;
+      padding: 10px 18px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    .modal button:hover {
+      background-color: #2196f3;
+    }
+
+    .modal select {
+      width: 100%;
+      padding: 8px 10px;
+      margin: 6px 0 14px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      background-color: #fff;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body style="font-family:'Roboto',sans-serif;background-color:#f0f2f5;color:#344767;line-height:1.6;overflow-x:hidden;">
@@ -172,7 +263,8 @@
       <div class="card">
         <div class="card-header">
           <h4 style="margin:0;font-weight:600;margin-bottom:0.5rem;color:#344767;">Thông tin danh mục</h4>
-          <p style="margin:0;color:#6c757d;font-size:0.875rem;">Nhập đầy đủ thông tin để thêm danh mục mới vào cửa hàng</p>
+          <p style="margin:0;color:#6c757d;font-size:0.875rem;">Nhập đầy đủ thông tin để thêm danh mục mới vào cửa hàng
+          </p>
         </div>
 
         <div class="card-body">
@@ -187,19 +279,24 @@
           <form id="addCategoryForm">
             <div class="form-group">
               <label for="categoryName" class="form-label">Tên danh mục <span style="color:#dc3545;">*</span></label>
-              <input type="text" class="form-control" id="categoryName" name="categoryName" placeholder="Nhập tên danh mục" required>
+              <input type="text" class="form-control" id="categoryName" name="categoryName"
+                placeholder="Nhập tên danh mục" required>
             </div>
 
             <div class="form-group">
               <label for="categoryDescription" class="form-label">Mô tả danh mục</label>
-              <textarea class="form-control" id="categoryDescription" name="categoryDescription" rows="4" placeholder="Nhập mô tả chi tiết về danh mục này"></textarea>
+              <textarea class="form-control" id="categoryDescription" name="categoryDescription" rows="4"
+                placeholder="Nhập mô tả chi tiết về danh mục này"></textarea>
             </div>
 
             <!-- Buttons -->
-            <div style="display:flex;justify-content:center;gap:1rem;margin-top:2rem;padding-top:2rem;border-top:1px solid #dee2e6;">
-              <button type="button" class="btn btn-secondary" onclick="window.location.href='category.html'">Quay về</button>
-              <button type="submit" class="btn btn-gradient" style="padding:0.75rem 2rem;font-weight:600;" onclick="alert('Thêm thành công');window.location.href='category.html';">
-                <i class="material-icons" style="font-size:1rem;margin-right:0.5rem;vertical-align:middle;">add_circle</i>
+            <div
+              style="display:flex;justify-content:center;gap:1rem;margin-top:2rem;padding-top:2rem;border-top:1px solid #dee2e6;">
+              <button type="button" class="btn btn-secondary" onclick="window.location.href='category.html'">Quay
+                về</button>
+              <button type="submit" class="btn btn-gradient" style="padding:0.75rem 2rem;font-weight:600;">
+                <i class="material-icons"
+                  style="font-size:1rem;margin-right:0.5rem;vertical-align:middle;">add_circle</i>
                 Thêm danh mục
               </button>
             </div>
@@ -209,9 +306,19 @@
     </div>
   </main>
 
+  <!-- Popup thêm danh mục thành công -->
+  <div class="modal" id="successModal">
+    <div class="modal-content" style="max-width:400px; text-align:center; padding:30px;">
+      <h3 style="color:#202021; margin-bottom:15px;"></h3>Thêm sản phẩm thành công!</h3>
+      <p>Sản phẩm mới đã được lưu vào danh sách.</p>
+      <button id="closeSuccessModal"
+        style="margin-top:20px; background-color:#e88f2a; color:white; border:none; padding:10px 20px; border-radius:6px; cursor:pointer;">Đóng</button>
+    </div>
+  </div>
+
   <script>
     // Form submission
-    document.getElementById('addCategoryForm').addEventListener('submit', function(e) {
+    document.getElementById('addCategoryForm').addEventListener('submit', function (e) {
       e.preventDefault();
 
       const formData = new FormData(this);
@@ -223,13 +330,11 @@
         return;
       }
 
-      // Mô phỏng xử lý thêm danh mục
-      showAlert('success', 'Đang xử lý...');
+      // Hiển thị popup thay vì alert
       setTimeout(() => {
-        alert('Thêm danh mục thành công!');
-        showAlert('success', `Danh mục "${categoryName}" đã được thêm thành công!`);
+        showSuccessModal(categoryName);
         resetForm();
-      }, 1000);
+      }, 800);
     });
 
     function showAlert(type, message) {
@@ -247,11 +352,27 @@
       setTimeout(() => { success.style.display = 'none'; error.style.display = 'none'; }, 4000);
     }
 
+    function showSuccessModal(categoryName) {
+      const modal = document.getElementById('successModal');
+      modal.style.display = 'flex';
+      modal.style.alignItems = 'center';
+      modal.style.justifyContent = 'center';
+      modal.querySelector('p').textContent = `Danh mục "${categoryName}" đã được thêm thành công!`;
+    }
+
+    document.getElementById('closeSuccessModal').addEventListener('click', function () {
+      document.getElementById('successModal').style.display = 'none';
+      // Quay lại trang danh mục sau khi đóng popup (nếu muốn)
+      window.location.href = 'category.html';
+    });
+
     function resetForm() {
       document.getElementById('addCategoryForm').reset();
       document.getElementById('success-alert').style.display = 'none';
       document.getElementById('error-alert').style.display = 'none';
     }
   </script>
+
 </body>
+
 </html>
