--- a/admin/category.html
+++ b/admin/category.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,15 +26,16 @@
       background: white;
       border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
     thead {
-      background: linear-gradient(195deg, #202021, #202021);
+      background: linear-gradient(195deg, #2b2825, #2b2825);
       color: white;
     }
 
-    th, td {
+    th,
+    td {
       padding: 14px 16px;
       font-size: 14px;
       border-bottom: 1px solid #e0e0e0;
@@ -60,8 +62,10 @@
     }
 
     /* Căn giữa các cột STT và Thao tác */
-    td:nth-child(1), th:nth-child(1),
-    td:nth-child(4), th:nth-child(4) {
+    td:nth-child(1),
+    th:nth-child(1),
+    td:nth-child(4),
+    th:nth-child(4) {
       text-align: center;
     }
 
@@ -90,18 +94,28 @@
       transition: 0.2s;
     }
 
-    .btn-edit { background-color: #1976d2; }
-    .btn-edit:hover { background-color: #144f8a; }
+    .btn-edit {
+      background-color: #1976d2;
+    }
 
-    .btn-delete { background-color: #e53935; }
-    .btn-delete:hover { background-color: #ef5350; }
+    .btn-edit:hover {
+      background-color: #144f8a;
+    }
+
+    .btn-delete {
+      background-color: #e53935;
+    }
+
+    .btn-delete:hover {
+      background-color: #ef5350;
+    }
 
     /* Add button */
     .btn-add {
       display: inline-flex;
       align-items: center;
       gap: 8px;
-      background: linear-gradient(195deg, #ff9800, #f57c00);
+      background: #ff9800;
       color: white;
       padding: 10px 18px;
       font-size: 14px;
@@ -116,6 +130,86 @@
       transform: translateY(-2px);
     }
 
+    .modal {
+      display: none;
+      /* Ẩn mặc định */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+    }
+
+    .modal-content {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 400px;
+      max-width: 90%;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+
+    .modal-close {
+      cursor: pointer;
+      font-size: 20px;
+      font-weight: bold;
+      color: #555;
+    }
+
+    .modal-close:hover {
+      color: #000;
+    }
+
+    #editForm input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+
+    #editForm button {
+      width: 100%;
+      background: #1976d2;
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    #editForm button:hover {
+      background: #144f8a;
+    }
+
+    #editForm textarea {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      resize: vertical;
+      /* cho phép người dùng kéo giãn */
+      font-family: 'Roboto', sans-serif;
+      font-size: 14px;
+      line-height: 1.4;
+      height: 80px;
+      /* tăng chiều cao mặc định */
+      box-sizing: border-box;
+    }
   </style>
 </head>
 
@@ -264,57 +358,92 @@
         </tr>
       </thead>
       <tbody>
-  <tr>
-    <td>1</td>
-    <td>Bánh sinh nhật</td>
-    <td>Các loại bánh kem và bánh tạo hình dùng cho sinh nhật, phù hợp nhiều chủ đề và độ tuổi khác nhau.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
+        <tr>
+          <td>1</td>
+          <td>Bánh sinh nhật</td>
+          <td>Các loại bánh kem và bánh tạo hình dùng cho sinh nhật, phù hợp nhiều chủ đề và độ tuổi khác nhau.</td>
+          <td>
+            <div class="actions">
+              <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
+              <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
+            </div>
+          </td>
+        </tr>
 
-  <tr>
-    <td>2</td>
-    <td>Bánh cưới</td>
-    <td>Bánh cưới sang trọng, thiết kế nhiều tầng với phong cách hiện đại hoặc truyền thống, dành cho lễ cưới và tiệc đính hôn.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
+        <tr>
+          <td>2</td>
+          <td>Bánh cưới</td>
+          <td>Bánh cưới sang trọng, thiết kế nhiều tầng với phong cách hiện đại hoặc truyền thống, dành cho lễ cưới và
+            tiệc đính hôn.</td>
+          <td>
+            <div class="actions">
+              <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
+              <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
+            </div>
+          </td>
+        </tr>
 
-  <tr>
-    <td>3</td>
-    <td>Bánh ăn vặt</td>
-    <td>Các loại bánh nhỏ gọn, tiện lợi như cupcake, cookie, hoặc bánh quy, phù hợp dùng kèm trà và cà phê.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
-</tbody>
+        <tr>
+          <td>3</td>
+          <td>Bánh ăn vặt</td>
+          <td>Các loại bánh nhỏ gọn, tiện lợi như cupcake, cookie, hoặc bánh quy, phù hợp dùng kèm trà và cà phê.</td>
+          <td>
+            <div class="actions">
+              <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
+              <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
 
     </table>
   </main>
+  <!-- Modal chỉnh sửa -->
+  <div class="modal" id="editModal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>Chỉnh sửa danh mục</h3>
+        <span class="modal-close" id="closeModal">&times;</span>
+      </div>
+      <form id="editForm">
+        <input type="hidden" id="editRowIndex" />
+
+        <label>Tên danh mục:</label>
+        <input type="text" id="editName" required />
+
+        <label>Mô tả:</label>
+        <textarea id="editDescription" rows="4" required></textarea>
+
+
+        <button type="submit">Lưu thay đổi</button>
+      </form>
+    </div>
+  </div>
+
 
   <script>
-    const editButtons = document.querySelectorAll('.btn-edit');
-    const deleteButtons = document.querySelectorAll('.btn-delete');
+    // ======= NÚT SỬA MỞ MODAL =======
+    document.querySelectorAll(".btn-edit").forEach((btn, index) => {
+      btn.addEventListener("click", () => {
+        const tr = btn.closest("tr");
+        document.getElementById("editRowIndex").value = index;
+        document.getElementById("editName").value = tr.children[1].textContent.trim();
+        document.getElementById("editDescription").value = tr.children[2].textContent.trim();
+        document.getElementById("editModal").style.display = "flex";
+      });
+    });
 
-    editButtons.forEach(btn => btn.addEventListener('click', () => {
-      window.location.href = 'edit-category.html';
-    }));
 
-    deleteButtons.forEach(btn => btn.addEventListener('click', () => {
-      alert('Xóa danh mục thành công!');
-    }));
+
+    // ======= ĐÓNG MODAL =======
+    document.getElementById("closeModal").onclick = () => {
+      document.getElementById("editModal").style.display = "none";
+    };
+    window.onclick = (e) => {
+      if (e.target.id === "editModal")
+        document.getElementById("editModal").style.display = "none";
+    };
   </script>
 </body>
+
 </html>
