Push tu laptop len de PC lay ve

--- a/admin/user.html
+++ b/admin/user.html
@@ -518,7 +518,7 @@
         <thead>
           <tr>
             <th>STT</th>
-            <th>Tên</th>
+            <th>Họ và tên</th>
             <th>Trạng thái</th>
             <th>Hành động</th>
           </tr>
