--- a/admin/index.html
+++ b/admin/index.html
@@ -346,7 +346,7 @@
                   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.14);
                 "
               >
-                <h4 style="margin: 0; font-weight: 500">Số nhân viên</h4>
+                <h4 style="margin: 0; font-weight: 500">Số đầu bếp</h4>
                 <p
                   style="
                     margin: 0.25rem 0 0;
@@ -357,7 +357,7 @@
                   25
                 </p>
                 <a
-                  href="user.html"
+                  href="chef.html"
                   style="color: white; text-decoration: underline"
                   >View Staff</a
                 >
