--- a/admin/import.html
+++ b/admin/import.html
@@ -37,6 +37,11 @@
       font-size: 14px;
       text-align: left;
     }
+    th, td {
+  text-align: center !important; /* Căn giữa ngang */
+  vertical-align: middle !important; /* Căn giữa dọc */
+}
+
 
     tbody tr:nth-child(even) {
       background-color: #fafafa;
@@ -200,15 +205,7 @@
             0 7px 10px -5px rgba(240, 163, 74, 0.6);
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý nhập hàng</a>
       </li>
-      <li>
-        <a href="giaban.html" style="
-              display: flex;
-              align-items: center;
-              padding: 0.75rem 1rem;
-              color: white;
-              text-decoration: none;
-            "><i class="material-icons" style="margin-right: 10px"></i>Quản lý giá bán</a>
-      </li>
+
       <li>
         <a href="tonkho.html" style="
               display: flex;
